log/build_2026-06-25_21-31-44/warehouse_manipulation/stderr.log
CMake Deprecation Warning at /opt/ros/jazzy/share/tl_expected/cmake/tl_expectedConfig.cmake:37 (message):
  Package 'tl_expected' is deprecated (This package will be removed in ROS 2
  Lyrical Luth.

        Use tl/expected.hpp from libexpected-dev,
        or rcpputils/tl_expected/expected.hpp if the system header is not available)
Call Stack (most recent call first):
  /opt/ros/jazzy/share/parameter_traits/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/parameter_traits/cmake/parameter_traitsConfig.cmake:41 (include)
  /opt/ros/jazzy/share/generate_parameter_library/cmake/generate_parameter_library-extras.cmake:30 (find_package)
  /opt/ros/jazzy/share/generate_parameter_library/cmake/generate_parameter_libraryConfig.cmake:41 (include)
  /opt/ros/jazzy/share/moveit_core/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/moveit_core/cmake/moveit_coreConfig.cmake:41 (include)
  /opt/ros/jazzy/share/moveit_ros_planning_interface/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/moveit_ros_planning_interface/cmake/moveit_ros_planning_interfaceConfig.cmake:41 (include)
  CMakeLists.txt:9 (find_package)


In file included from /home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp:11:
/opt/ros/jazzy/include/moveit_ros_planning_interface/moveit/move_group_interface/move_group_interface.h:51:77: note: ‘#pragma message: .h header is obsolete. Please use the .hpp header instead.’
   51 | #pragma message(".h header is obsolete. Please use the .hpp header instead.")
      |                                                                             ^
/home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp: In constructor ‘PlaceProductServer::PlaceProductServer(const rclcpp::Node::SharedPtr&)’:
/home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp:66:13: error: ‘ServiceOptions’ is not a member of ‘rclcpp’; did you mean ‘exceptions’?
   66 |     rclcpp::ServiceOptions service_options;
      |             ^~~~~~~~~~~~~~
      |             exceptions
/home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp:67:5: error: ‘service_options’ was not declared in this scope
   67 |     service_options.callback_group = callback_group_;
      |     ^~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/place_product_server.dir/build.make:76: CMakeFiles/place_product_server.dir/src/place_product_server.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/place_product_server.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
